--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    background-image: url(/Images/1922035253-huge.jpg);
+    background-image: url(./Images/1922035253-huge.jpg);
     background-repeat: repeat-y;
 }
 
